# atap

./: .gitignore  ATAP-BUILD-GUIDE.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: sdk-go.yml  sdk-java.yml  sdk-javascript.yml  sdk-php.yml  sdk-python.yml  sdk-subtree-split.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cli/: go.mod  main.go
docs/: ATAP-SPEC-v1.0-rc1.md  BUILD-GUIDE.md  FIREBASE-SETUP.md
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: crypto_compat_test.dart  inbox_provider_test.dart  inbox_widget_test.dart  signal_model_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
platform/: Dockerfile  go.mod  go.sum
platform/migrations/: 001_entities.down.sql  001_init.sql  (+24 more)
scripts/: atap-cli.js  atap-test.py  setup.sh
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: approval_flow.py  credential_verification.py  register_agent.py
sdks/python/src/atap/: __init__.py  approvals.py  client.py  credentials.py  crypto.py  didcomm.py  discovery.py  entities.py  errors.py  http_client.py  models.py  oauth.py  revocations.py
sdks/python/tests/: conftest.py  test_approvals.py  test_client.py  test_credentials.py  test_crypto.py  test_didcomm.py  test_discovery.py  test_entities.py  test_http_client.py  test_oauth.py  test_revocations.py
spec/: ATAP-SPEC-v0.1.md  ATAP-SPEC-v1.0-rc1.md
web/: Dockerfile  nginx.conf  package-lock.json  package.json
(+457 files in other folders)
